chore: Update desktop dotfiles

--- a/arch-v2/desktop/picom/picom.conf
+++ b/arch-v2/desktop/picom/picom.conf
@@ -10,8 +10,10 @@ opacity-rule = [
   "100:class_g = 'Alacritty'"
 ];
 
-blur-method = "kernel";
-blur-kern = "11x11gaussian";
+#blur-method = "kernel";
+#blur-kern = "11x11gaussian";
+blur-method = "dual_kawase";
+blur-strength = 8;
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
@@ -20,15 +22,28 @@ blur-background-exclude = [
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
-backend = "xrender";
+#animations: true;
+#animation-stiffness = 300;
+#animation-window-mass = 0.4;
+#animation-dampening = 15;
+#animation-clamping = false;
+#animation-for-open-window = "zoom";
+#animation-for-unmap-window = "zoom";
+#animation-for-transient-window = "slide-up";
+#animation-for-workspace-switch-in = "slide-down";
+#animation-for-workspace-switch-out = "zoom";
+
+backend = "glx";
 glx-no-stencil = true;
 glx-copy-from-front = false;
+glx-no-rebind-pixmap = true;
 
 vsync = false;
+transparent-clipping-exclude = true;
+unredir-if-possible = true;
 mark-wmwin-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 144;
 detect-transient = true;
 use-damage = true;
 xrender-sync-fence = true;
