--- a/arch-v2/desktop/polybar/config2.ini
+++ b/arch-v2/desktop/polybar/config2.ini
@@ -9,136 +9,147 @@
 ;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
 ;
 ;
+;   To learn more about how to configure Polybar
+;   go to https://github.com/polybar/polybar
+;
+;   The README contains a lot of information
+;
 ;==========================================================
 
 [colors]
+#background = #282A2E
 background = #00
-background-alt = #3306080a
-primary = #fff
-alert = #f7768e
+background-alt = #373B41
+foreground = #FFFFFF
+primary = #F0C674
+secondary = #8ABEB7
+alert = #EB4034
+temp = #3480EB
+disabled = #707880
 
 [bar/top]
 width = 100%
-height = 30
+height = 24pt
 
 monitor = ${env:MONITOR:}
 
 background = ${colors.background}
+foreground = ${colors.foreground}
 
-border-size = 0
-border-color = #00000000
+line-size = 3pt
 
 padding-left = 0
-padding-right = 0
+padding-right = 1
 
-module-margin-left = 1
-module-margin-right = 1
+module-margin = 1
 
-font-0 = FiraCode Nerd Font:size=12;1
+separator = |
+separator-foreground = ${colors.disabled}
 
-modules-left = i3
-modules-right = pulseaudio memory cpu temperature date powermenu
+font-0 = Noto Sans Mono Nerd Font:size=14;1
+
+modules-left = xworkspaces
+modules-right = pulseaudio memory cpu temperature date
 
 tray-position = right
 tray-padding = 0
 tray-reparent = true
-tray-offset-y = -2
 
-wm-restack = i3
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+wm-restack = bspwm
 override-redirect = false
 
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:30:...%
+[module/xworkspaces]
+type = internal/xworkspaces
 
-[module/i3]
-type = internal/i3
-format = <label-state> <label-mode>
-index-sort = true
-wrapping-scroll = false
+label-active = %name%
+label-active-background = ${colors.background-alt}
+label-active-underline= ${colors.primary}
+label-active-padding = 1
 
-label-mode-padding = 1
-label-mode-foreground = #000
-label-mode-background = ${colors.primary}
+label-occupied = %name%
+label-occupied-padding = 1
 
-label-focused = %index%
-label-focused-background = ${colors.background}
-label-focused-underline= ${colors.primary}
-label-focused-padding = 1
-
-label-unfocused = %index%
-label-unfocused-padding = 1
-
-label-visible = %index%
-label-visible-background = ${self.label-focused-background}
-label-visible-underline = ${self.label-focused-underline}
-label-visible-padding = ${self.label-focused-padding}
-
-label-urgent = %index%
+label-urgent = %name%
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-urgent-padding = 1
 
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = #eb4034
-format-underline = #ff9000
-label = %percentage%%
+label-empty = %name%
+label-empty-foreground = ${colors.disabled}
+label-empty-padding = 1
 
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = "MEM "
-format-prefix-foreground = #eb4034
-format-underline = #4bffdc
-label = %percentage_used%%
+[module/battery]
+type = internal/battery
 
-[module/wired-network]
-type = internal/network
-interface = enp5s0
-interval = 3.0
+battery = BAT0
+adapter = ADP0
 
-format-connected-underline = #55aa55
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %local_ip%
+poll-interval = 5
+time-format = %H:%M
 
-[module/date]
-type = internal/date
-interval = 5
+format-charging = <animation-charging> <label-charging>
+format-discharging = <ramp-capacity> <label-discharging>
 
-date =
-date-alt = " %Y-%m-%d"
+label-charging = " %percentage%%"
+label-discharging = " %percentage%%"
 
-time = %H:%M
-time-alt = %H:%M:%S
+label-full = 
 
-format-prefix = ""
-format-prefix-foreground = #eb4034
-format-underline = #0a6cf5
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 
-label = %date% %time%
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-framerate = 1000
+
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-3 = 
+animation-discharging-4 = 
+animation-discharging-framerate = 1000
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
 format-volume = <label-volume>
 label-volume = "VOL %percentage%%"
-label-volume-foreground = #fff
+label-volume-foreground = ${colors.primary}
 
 label-muted = "VOL ﱝ"
-label-muted-foreground = #eb4034
+label-muted-foreground = ${colors.alert}
+
+[module/memory]
+type = internal/memory
+interval = 2
+format-prefix = "RAM "
+format-prefix-foreground = ${colors.primary}
+label = %percentage_used:2%%
+
+[module/cpu]
+type = internal/cpu
+interval = 2
+format-prefix = "CPU "
+format-prefix-foreground = ${colors.primary}
+label = %percentage%%
 
 [module/temperature]
 type = internal/temperature
-thermal-zone = 0
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon4/temp1_input
+base-temperature = 0
 warn-temperature = 80
+interval = 2
 
 format = <ramp> <label>
-format-underline = #f50a4d
 format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
 
 label = %temperature-c%
 label-warn = %temperature-c%
@@ -147,11 +158,34 @@ label-warn-foreground = ${colors.alert}
 ramp-0 = " "
 ramp-1 = " "
 ramp-2 = " "
-ramp-1-foreground = #20d42c
-ramp-2-foreground = #d8db2c
-ramp-3-foreground = #f72d2d
+ramp-foreground = ${colors.temp}
 
-hwmon-path = /sys/devices/virtual/thermal/thermal_zone0/hwmon0/temp2_input
+[network-base]
+type = internal/network
+interval = 5
+format-connected = <label-connected>
+format-disconnected = <label-disconnected>
+label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+
+[module/wlan]
+inherit = network-base
+interface-type = wireless
+label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+
+[module/eth]
+inherit = network-base
+interface-type = wired
+label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+
+[module/date]
+type = internal/date
+interval = 1
+
+date = %H:%M
+date-alt = %Y-%m-%d %H:%M:%S
+
+label = %date%
+label-foreground = ${colors.primary}
 
 [module/powermenu]
 type = custom/menu
@@ -161,12 +195,12 @@ expand-right = false
 format-spacing = 1
 format-padding = 1
 
-label-open = "  "
-label-open-foreground = #fff
+label-open = " "
+label-open-foreground = ${colors.foreground}
 label-close = Cancel
-label-close-foreground = #fff
+label-close-foreground = ${colors.foreground}
 label-separator = /
-label-separator-foreground = #eb4034
+label-separator-foreground = ${colors.alert}
 
 menu-0-0 = Reboot
 menu-0-0-exec = menu-open-1
@@ -190,14 +224,5 @@ menu-3-1-exec = menu-open-0
 
 [settings]
 screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
-;pseudo-transparency = false
-
-[global/wm]
-margin-top = 0
-margin-bottom = 0
 
 ; vim:ft=dosini
