--- a/arch-v2/desktop/alacritty/alacritty.yml
+++ b/arch-v2/desktop/alacritty/alacritty.yml
@@ -52,7 +52,7 @@ font:
   normal:
 
     # Font family
-    family: JetBrains Mono
+    family: Noto Sans Mono
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -61,7 +61,7 @@ font:
   bold:
 
     # Font family
-    family: JetBrains Mono
+    family: Noto Sans Mono
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -70,7 +70,7 @@ font:
   italic:
 
     # Font family
-    family: JetBrains Mono
+    family: Noto Sans Mono
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -79,13 +79,13 @@ font:
   bold_italic:
 
     # Font family
-    family: JetBrains Mono
+    family: Noto Sans Mono
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
 
   # Point size
-  size: 14.0
+  size: 16.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
