--- a/arch-v2/desktop/polybar/config.ini
+++ b/arch-v2/desktop/polybar/config.ini
@@ -1,54 +1,56 @@
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
-;==========================================================
-
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #FFFFFF
+background = #16161e
+background-alt = #20212C
+foreground = #acb0d0
+foreground-alt = #5D5E72
+
 primary = #F0C674
 secondary = #8ABEB7
 alert = #EB4034
 temp = #3480EB
 disabled = #707880
 
+red = #ff7a93
+
+trans = #00000000
+semi-trans-black = #cc000000
+
+shade-1 = #32344a
+shade-2 = #444b6a
+shade-3 = #787c99
+shade-4 = #CACACE
+shade-5 = #acb0d0
+
 [bar/top]
 width = 100%
 height = 24pt
+offset-y = 0
+top = true
+fixed-center = true
 
 monitor = ${env:MONITOR:}
+
+wm-restack = bspwm
+override-redirect = false
+
+scroll-up = next
+scroll-down = prev
+
+enable-ipc = true
+line-size = 3pt
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3pt
+font-0 = "Noto Sans Mono Nerd Font:style=Medium:size=14"
 
-padding-left = 0
-padding-right = 1
-
+modules-left = date
+modules-center = xworkspaces
+modules-right = pulseaudio memory cpu temperature session
 module-margin = 1
 
 separator = |
 separator-foreground = ${colors.disabled}
-
-font-0 = JetBrains Mono Nerd Font:size=13;1
-
-modules-left = xworkspaces
-modules-right = pulseaudio memory cpu temperature date powermenu
 
 tray-position = right
 tray-padding = 0
@@ -57,8 +59,33 @@ tray-reparent = true
 cursor-click = pointer
 cursor-scroll = ns-resize
 
-wm-restack = bspwm
-override-redirect = false
+padding-left = 1
+padding-right = 0
+
+[settings]
+screenchange-reload = true
+
+[module/battery]
+type = internal/battery
+battery = BAT0
+adapter = ADP1
+full-at = 100
+format-charging =  <label-charging>
+label-charging = %percentage:2%%
+format-charging-padding = 1
+format-charging-foreground = ${colors.foreground}
+format-discharging = <ramp-capacity> <label-discharging>
+label-discharging = %percentage%%
+format-discharging-foreground = ${colors.foreground}
+format-full-prefix = "  "
+ramp-capacity-0 = " "
+ramp-capacity-1 = " "
+ramp-capacity-2 = " "
+ramp-capacity-3 = " "
+ramp-capacity-4 = " "
+ramp-capacity-0-foreground = ${colors.red}
+animation-charging-framerate = 910
+format-discharging-padding = 1
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -79,42 +106,15 @@ label-empty = %name%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
 
-[module/battery]
-type = internal/battery
+[module/date]
+type = internal/date
+interval = 1
 
-battery = BAT0
-adapter = ADP0
+date = %H:%M
+date-alt = %Y-%m-%d %H:%M:%S
 
-poll-interval = 5
-time-format = %H:%M
-
-format-charging = <animation-charging> <label-charging>
-format-discharging = <ramp-capacity> <label-discharging>
-
-label-charging = " %percentage%%"
-label-discharging = " %percentage%%"
-
-label-full = 
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-framerate = 1000
-
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
-animation-discharging-3 = 
-animation-discharging-4 = 
-animation-discharging-framerate = 1000
+label = %date%
+label-foreground = ${colors.primary}
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -142,7 +142,7 @@ label = %percentage%%
 
 [module/temperature]
 type = internal/temperature
-hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon4/temp1_input
+hwmon-path = ${env:HWMON_PATH}
 base-temperature = 0
 warn-temperature = 80
 interval = 2
@@ -158,6 +158,15 @@ ramp-0 = " "
 ramp-1 = " "
 ramp-2 = " "
 ramp-foreground = ${colors.temp}
+
+[module/session]
+type = custom/text
+
+click-left = .local/bin/powermenu
+content = %{T4} %{T-}
+#content-background = ${colors.shade-2}
+content-foreground = #FFFFFF
+content-padding = 1
 
 [network-base]
 type = internal/network
@@ -175,53 +184,3 @@ label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
 inherit = network-base
 interface-type = wired
 label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
-
-[module/date]
-type = internal/date
-interval = 1
-
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
-
-label = %date%
-label-foreground = ${colors.primary}
-
-[module/powermenu]
-type = custom/menu
-
-expand-right = false
-
-format-spacing = 1
-format-padding = 1
-
-label-open = " "
-label-open-foreground = ${colors.foreground}
-label-close = Cancel
-label-close-foreground = ${colors.foreground}
-label-separator = /
-label-separator-foreground = ${colors.alert}
-
-menu-0-0 = Reboot
-menu-0-0-exec = menu-open-1
-menu-0-1 = Shutdown
-menu-0-1-exec = menu-open-2
-
-menu-1-0 = Cancel
-menu-1-0-exec = menu-open-0
-menu-1-1 = Reboot
-menu-1-1-exec = reboot
-
-menu-2-0 = Shutdown
-menu-2-0-exec = poweroff
-menu-2-1 = Cancel
-menu-2-1-exec = menu-open-0
-
-menu-3-0 = Logout
-menu-3-0-exec = i3-msg exit
-menu-3-1 = Cancel
-menu-3-1-exec = menu-open-0
-
-[settings]
-screenchange-reload = true
-
-; vim:ft=dosini
